Set up markdown for project descriptions

--- a/config/locales/devise_invitable.ru.yml
+++ b/config/locales/devise_invitable.ru.yml
@@ -1,28 +1,28 @@
 ru:
   devise:
     failure:
-      invited: "Вам отправлено приглашение, примите его, чтобы закончить создание аккаунта."
+      invited: "У Вас есть непринятое приглашение, подтвержите его чтобы продолжить создание аккаунта."
     invitations:
-      send_instructions: "Приглашение было отправлено на адрес %{email}."
-      invitation_token_invalid: "Предоставленный токен приглащения недействителен!"
-      updated: "Ваш аккаунт был успешно обновлён. Теперь Вы авторизированы."
+      send_instructions: "Письмо с приглашением было отправлено на %{email}."
+      invitation_token_invalid: "Неверный токен приглашения."
+      updated: "Ваш пароль успешно сохранён. Вы вошли в систему."
       updated_not_active: "Ваш аккаунт был успешно обновлён."
-      no_invitations_remaining: "Приглашений не осталось."
+      no_invitations_remaining: "Приглашений нет."
       invitation_removed: "Ваше приглашение было удалено."
       new:
         header: "Отправить приглашение"
         submit_button: "Отправить приглашение"
       edit:
-        header: "Создать Аккаунт"
-        submit_button: "Создать Аккаунт"
+        header: "Создание пароля"
+        submit_button: "Сохранить"
     mailer:
       invitation_instructions:
-        subject: "Приглашение в команду"
+        subject: "Приглашение в команду и инструкции по созданию учетной записи"
         hello: "Привет, %{email}"
         someone_invited_you: "Вас пригласили вступить в команду %{url}, Вы можете принять приглашение, перейдя по ссылке ниже."
         accept: "Принять приглашение"
         accept_until: "Это приглашение действительно до %{due_date}."
-        ignore: "Если вы не хотите принимать приглашение, пожалуйста, проигнорируйте это сообщение.<br />\nВаш аккаунт не будет создан, пока Вы не перейдёте по ссылке приглашения и не установите свой пароль."
+        ignore: "Если вы не хотите принимать приглашение, проигнорируйте это письмо.<br />\nУчетная запись не будет создана, пока Вы не перейдёте по ссылке приглашения и не установите пароль."
   time:
     formats:
       devise:
