Set up countdown timer with locales on landing page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,9 @@
 
 en:
   hello: "Hello world"
+  landing:
+    sign_up_button: 'Participate'
+    title:
+      main_title: 'Itivation Hackathon'
+    countdown:
+      time_left: "Time left"
