Not finished attempt to align the first two blocks on the landing page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,6 +23,7 @@ en:
   hello: "Hello world"
   landing:
     sign_up_button: 'Participate'
+    mentor_sign_up_button: 'Become a mentor'
     title:
       main_title: 'Itivation Hackathon'
     countdown:
