--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,6 +1,7 @@
 ru:
   landing:
     sign_up_button: 'Принять участие'
+    mentor_sign_up_button: 'Cтать ментором'
     title:
       main_title: 'Хакатон Itivation'
     countdown:
