Set up mentor approvals

--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -11,6 +11,7 @@ ru:
       locked: "Ваш аккаунт заблокирован."
       last_attempt: "У Вас осталась последняя попытка до блокировки аккаунта."
       not_found_in_database: "Неверные %{authentication_keys} или пароль."
+      not_approved: "Ваш аккаунт пока что не подтверждёт организаторами."
       timeout: "Время сессии истекло. Пожалуйста, авторизируйтесь еще раз, чтобы продолжить."
       unauthenticated: "Войдите или зарегистрируйтесь, чтобы продолжить."
       unconfirmed: "Чтобы продолжить, подтвердите свой адрес электронной почты."
@@ -40,6 +41,8 @@ ru:
       signed_up_but_unconfirmed: "Вам на почту отправлено сообщение со ссылкой для подтверждения регистрации. Пожалуйста, перейдите по этой ссылке для активации аккаунта."
       update_needs_confirmation: "Ваш аккаунт был успешно обновлён, но нам нужно подтвердить адрес Вашей электронной почты. Пожалуйста, проверьте почту и перейдите по ссылке подтверждения аккаунта, указанной в сообщении с инструкциями по подтверждению."
       updated: "Ваш аккаунт был успешно обновлён."
+      user:
+        signed_up_but_not_approved: "Вы успешно зарегистрировались, но Ваш аккаунт пока что не был подтверждён организаторами"
     sessions:
       signed_in: "Авторизация прошла успешно."
       signed_out: "Вы успешно вышли."
