Correct the i18n error with mentor approvals

--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -41,7 +41,7 @@ ru:
       signed_up_but_unconfirmed: "Вам на почту отправлено сообщение со ссылкой для подтверждения регистрации. Пожалуйста, перейдите по этой ссылке для активации аккаунта."
       update_needs_confirmation: "Ваш аккаунт был успешно обновлён, но нам нужно подтвердить адрес Вашей электронной почты. Пожалуйста, проверьте почту и перейдите по ссылке подтверждения аккаунта, указанной в сообщении с инструкциями по подтверждению."
       updated: "Ваш аккаунт был успешно обновлён."
-      user:
+      mentor:
         signed_up_but_not_approved: "Вы успешно зарегистрировались, но Ваш аккаунт пока что не был подтверждён организаторами"
     sessions:
       signed_in: "Авторизация прошла успешно."
